--- a/components/header.html
+++ b/components/header.html
@@ -5,6 +5,7 @@
         <!-- 🔹 Brand Section -->
     <div class="brand-header">
       <div class="brand-text">
+        <img src="assets/taskhub-logo.svg" alt="Bita Digital Hub Logo" width="36" height="36" />
         <h1 class="brand-title">Bita Digital Hub</h1>
       </div>
     </div>
