make header better

--- a/components/header.html
+++ b/components/header.html
@@ -36,9 +36,9 @@
         <button class="dropbtn">Services ▾</button>
         <div class="dropdown-content">
           <a href="services.html#overview">Overview</a>
-          <a href="services/training.html">Online Franchise Business</a>
+          <a href="services/online-business.html">Online Franchise Business</a>
           <a href="services/affiliateprogram.html">Affiliate Programs</a>
-          <a href="services/automation.html">Automation</a>
+          <a href="services/telegram_bot.html">Automation</a>
          </div>
       </div>
 
@@ -46,7 +46,7 @@
         <button class="dropbtn">Courses ▾</button>
         <div class="dropdown-content">
           <a href="courses.html#overview">Overview</a> 
-          <a href="courses/freelearning.html">Free Learning Courses</a>
+          <a href="courses/freecourses.html">Free Learning Courses</a>
           
         </div>
       </div>
