header :icon deleted

--- a/components/header.html
+++ b/components/header.html
@@ -37,17 +37,14 @@ Fixed alignment, balanced spacing, and polished language switch
         </button>
         <button class="lang-btn" data-lang="fa">
           <img src="https://flagcdn.com/16x12/ir.png" alt="فارسی" />
-          <span>فا</span>
+          <span>Fa</span>
         </button>
       </div>
 
-      <!-- 🌓 Theme toggle -->
-      <button id="theme-toggle" class="btn-theme" title="Switch Theme">
-        <span id="theme-icon">☀️</span>
-      </button>
+    
 
       <!-- 🔑 CTA / Login -->
-      <a href="login.html" class="btn-primary" data-i18n="nav.login">Get Started</a>
+      <a href="login.html" class="btn-primary" data-i18n="nav.login">login</a>
     </div>
   </div>
 </header>
